--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
 }
 .finder .finder_left {
-  width: 200px;
+  width: 300px;
   background-color: #3f3655;
 }
 .finder .finder_right {
@@ -31,7 +31,7 @@ body {
   display: flex;
   height: 42px;
   line-height: 42px;
-  padding: 0 10px;
+  padding: 0 10px 0 20px;
   font-size: 14px;
   -webkit-user-select: none;
           user-select: none;
@@ -42,12 +42,46 @@ body {
   height: 30px;
   line-height: 30px;
   margin-top: 6px;
-  padding: 0 5px;
+  padding: 0 5px 0 20px;
+  font-size: 14px;
   -webkit-user-select: text;
           user-select: text;
-  color: #444;
+  color: #666;
   background-color: #f5fafc;
   border-radius: 21px;
+  cursor: text;
+  outline: none;
+}
+.finder_pather .finder_toptext.view_mode {
+  display: -webkit-box;
+  display: flex;
+}
+.finder_pather .finder_path_dir {
+  display: block;
+  font-size: 14px;
+  -webkit-user-select: none;
+          user-select: none;
+}
+.finder_pather .finder_path_dir .path_dir_name {
+  display: inline-block;
+  cursor: pointer;
+}
+.finder_pather .finder_path_dir .path_dir_mark {
+  display: inline-block;
+  padding: 0 4px 0 6px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  font-size: 10px;
+  cursor: default;
+}
+.finder_pather .finder_path_dir:last-child .path_dir_mark {
+  display: none;
+}
+.finder_pather .finder_path_dir:hover .path_dir_name {
+  color: #000;
+}
+.tool {
+  padding: 6px 0;
 }
 .tool > div {
   display: -webkit-box;
@@ -56,16 +90,16 @@ body {
           justify-content: center;
   -webkit-box-align: center;
           align-items: center;
-  width: 42px;
-  height: 42px;
-  line-height: 42px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
   margin: 0 10px;
   border-radius: 3px;
   cursor: pointer;
+  color: #666;
 }
-.tool > div > img {
-  display: block;
-  height: 20px;
+.tool > div:hover {
+  color: #000;
 }
 .finder_container {
   -webkit-box-flex: 1;
