--- a/css/index.less
+++ b/css/index.less
@@ -15,8 +15,7 @@ body {
     display: flex;
     height: 100%;
     .finder_left {
-        width: 200px;
-        // background-color: rgba(26, 0, 89, .8); 
+        width: 300px; // background-color: rgba(26, 0, 89, .8); 
         background-color: #3f3655;
     }
     .finder_right {
@@ -30,7 +29,7 @@ body {
     display: flex;
     height: 42px;
     line-height: 42px;
-    padding: 0 10px; // border: #ddd solid 1px;
+    padding: 0 10px 0 20px; // border: #ddd solid 1px;
     font-size: 14px;
     user-select: none; // background-color: #f9f9fa;
     .finder_toptext {
@@ -38,28 +37,61 @@ body {
         height: 30px;
         line-height: 30px;
         margin-top: 6px;
-        padding: 0 5px;
+        padding: 0 5px 0 20px;
+        font-size: 14px;
         user-select: text;
-        color: #444;
+        color: #666;
         background-color: #f5fafc;
         border-radius: 21px;
+        cursor: text;
+        &.view_mode {
+            display: flex;
+        }
+        outline: none;
+    }
+    .finder_path_dir {
+        display: block;
+        font-size: 14px;
+        user-select: none;
+        .path_dir_name {
+            display: inline-block;
+            cursor: pointer;
+        }
+        .path_dir_mark {
+            display: inline-block;
+            padding: 0 4px 0 6px;
+            transform: rotate(180deg);
+            font-size: 10px;
+            cursor: default;
+        }
+        &:last-child {
+            .path_dir_mark {
+                display: none;
+            }
+        }
+        &:hover {
+            .path_dir_name {
+                color: #000;
+            }
+        }
     }
 }
 
 .tool {
+    padding: 6px 0;
     >div {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 42px;
-        height: 42px;
-        line-height: 42px;
-        margin: 0 10px; 
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        margin: 0 10px;
         border-radius: 3px;
         cursor: pointer;
-        >img {
-            display: block;
-            height: 20px;
+        color: #666;
+        &:hover {
+            color: #000;
         }
     }
 }
