--- a/css/index.less
+++ b/css/index.less
@@ -68,6 +68,9 @@ body {
             .path_dir_mark {
                 display: none;
             }
+            .path_dir_name{
+                cursor: default;
+            }
         }
         &:hover {
             .path_dir_name {
